# Matplotlib-cpp

./: CMakeLists.txt  README.md
include/: matplotlibcpp.h
src/: main.cpp  plotter.cpp
